@@ -100,8 +100,16 @@
     <jar
       jarfile="${build.dir}/${name}-model-${version}.jar"
       basedir="${build.classes}"
-      includes="**/model/M*"
-    />
+      includes="**/model/M*">
+      <manifest>
+        <!-- Not putting these in their own manifest section, since that inserts
+             a new-line, which breaks the reading of the attributes. -->
+        <attribute name="Implementation-Title" value="Hive"/>
+        <attribute name="Implementation-Version" value="${version}"/>
+        <attribute name="Implementation-Vendor" value="Apache"/>
+      </manifest>
+      <metainf dir="${hive.root}" includes="LICENSE,NOTICE"/>
+    </jar>
   </target>
 
   <target name="generate-schema">
