@@ -658,6 +658,9 @@ Release 0.6.0 -  Unreleased
     HIVE-1726. Update README file for 0.6.0 release
     (Carl Steinbach via jvs)
 
+    HIVE-1729. Satisfy ASF release management requirements
+    (Carl Steinbach via jvs)
+
   OPTIMIZATIONS
 
     HIVE-1348. Move inputFileChanged() from ExecMapper to where it is needed
